샤넬로 브랜드 교체

--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
                 </div>
                 <div class="text-box">
                   <p class="product-name">
-                    안티에이징 세럼<br>
-                    자음생 세럼
+                    N°1 DE CHANEL<br>
+                    REVITALIZING SERUM
                   </p>
-                  <p class="product-info">50mL/ ₩145,000</p>
+                  <p class="product-info">50mL/ ₩220,000</p>
                   <a class="link-headline">
                     <span class="link-title">
                       <span class="top">VIEW PRODUCT</span>
@@ -368,7 +368,7 @@
                   </a>
                 </div>
                 <div class="content-title">
-                  <img src="./assets/images/product_title_en_1-1.png" alt="안티에이징 세럼 자음생세럼">
+                  <img src="./assets/images/product_title_en_1.png" alt="REVITALIZING SERUM">
                 </div>
               </div>
             </div>
@@ -380,10 +380,10 @@
                 </div>
                 <div class="text-box">
                   <p class="product-name">
-                    안티에이징 크림<br>
-                    자음생크림
+                    N°1 DE CHANEL<br>
+                    REVITALIZING EYE CREAM
                   </p>
-                  <p class="product-info">60mL/₩270,000</p>
+                  <p class="product-info">15g/₩119,000</p>
                   <a href="" class="link-headline">
                     <p class="link-title">
                       <span class="top">VIEW PRODUCT</span>
@@ -400,7 +400,7 @@
                   </a>
                 </div>
                 <div class="content-title">
-                  <img src="./assets/images/product_title_en_2-2.png" alt="안티에이징 크림 자음생크림">
+                  <img src="./assets/images/product_title_en_2.png" alt=" REVITALIZING EYE CREAM">
                 </div>
               </div>
             </div>
@@ -412,10 +412,10 @@
                 </div>
                 <div class="text-box">
                   <p class="product-name">
-                    설화수 대표 에센스<br>
-                    윤조 에센스 6세대
+                    N°1 DE CHANEL<br>
+                    REVITALIZING FOUNDATION
                   </p>
-                  <p class="product-info">30mL/₩14,000</p>
+                  <p class="product-info">30mL/₩107,000</p>
                   <a href="" class="link-headline">
                     <p class="link-title">
                       <span class="top">VIEW PRODUCT</span>
@@ -432,7 +432,7 @@
                   </a>
                 </div>
                 <div class="content-title">
-                  <img src="./assets/images/product_title_en_3-2.png" alt="설화수 대표 에센스 윤조6세대">
+                  <img src="./assets/images/product_title_en_3.png" alt="REVITALIZING FOUNDATION">
                 </div>
               </div>
             </div>
@@ -471,16 +471,19 @@
                     <div class="text-box">
                       <div class="bottom">
                         <p class="text">
-                          소중한 사람에게 선물하는 설화수. 새해의 시작을 설화수와 함께 하세요. 새해의 시작. 설날에는 친지, 가족간의 연하장을 주고 받고, 새하얀 떡국을 먹으며 서로의 안녕과
-                          복을 기원했습니다. 새하얀 떡국. 새하얀 새해. 새로운 시작의 순백색을 모티브로 설화수와 함께 아름다워지는 설 선물을 제안합니다.
+                          Chanel is set to open a beauty pop-up in Edinburgh for the launch of its new Rouge Allure
+                          Velvet Nuit Blanche lipstick.
+                          Fronted by actress Margot Robbie, the new luminous matte lipstick range is available in eight
+                          shades based on each hour
+                          of the night.
                         </p>
                         <p class="date">
-                          2024.01.17
+                          2024.02.19
                         </p>
                       </div>
                     </div>
                     <div class="image-box">
-                      <img src="./assets/images/news_thumbnail2.png" alt>
+                      <img src="./assets/images/news_thumbnail2.jpeg" alt>
                     </div>
                   </a>
                 </li>
@@ -490,18 +493,20 @@
                       <div class="desc">
                         <div class="bottom">
                           <p class="text">
-                            S.라운지 고객만을 위한 특별한 기획
-                            혜택1: 퍼펙팅 쿠션 트리플 기획을 구매하신 S.라운지 고객께 퍼펙팅 쿠션 스페셜 KIT 1 or KIT 2(택1) 증정 해 드립니다. 혜택2: 포토 or 동영상
-                            리뷰 작성시 1,000POINT 추가 적립해드립니다.
+                            Chanel is on to the next wave. In a departure for the brand, which usually appoints one
+                            makeup artist as its creative
+                            director, the house has enlisted three—the newly formed Cometes Collective, who will be
+                            creating, designing, and
+                            collaborating on new products and collections.
                           </p>
                           <p class="date">
-                            2024.01.05
+                            2024.02.14
                           </p>
                         </div>
                       </div>
                     </div>
                     <div class="image-box">
-                      <img src="./assets/images/news_thumbnail3.png" alt>
+                      <img src="./assets/images/news_thumbnail3.jpg" alt>
                     </div>
                   </a>
                 </li>
@@ -511,19 +516,20 @@
                       <div class="desc">
                         <div class="bottom">
                           <p class="text">
-                            안녕하세요! 설화수 공식 브랜드스토어 입니다.
-                            지난 11월 20일 20시 진행했던 라이브 이벤트 당첨자 공지드립니다.
-                            다시 한 번 당첨 고객님 축하드립니다.
-                            이벤트 경품은 구매확정 확인 후 12월 중 개별 발송 될 예정인 점 안내 드립니다.
+                            Chanel Parfums Beauté and g.pivaudran have joined forces for the large-scale launch of the
+                            very first mascara product
+                            packed in recycled aluminium. The innovation will be showcased at the Paris Packaging Week
+                            on 17th and 18th January
+                            2024.
                           </p>
                           <p class="date">
-                            2023.11.21
+                            2024.02.12
                           </p>
                         </div>
                       </div>
                     </div>
                     <div class="image-box">
-                      <img src="./assets/images/news_thumbnail4.png" alt>
+                      <img src="./assets/images/news_thumbnail4.jpg" alt>
                     </div>
                   </a>
                 </li>
@@ -534,22 +540,21 @@
                       <div class="desc">
                         <div class="bottom">
                           <p class="text">
-                            안녕하세요! 설화수 공식 브랜드스토어 입니다.
-                            지난 11월 20일 11시 진행했던 숏클립 이벤트 당첨자 공지드립니다.
-                            다시 한 번 당첨 고객님 축하드립니다.
-                            이벤트 경품은 구매확정 확인 후 12월 중 개별 발송 될 예정인 점 안내 드립니다.
-                            1. 구매인증 (10명)
-                            숏클립 방송동안 구매후 구매인증 번호를 올려주신 분 추첨하여 공유드립니다.
-                            상품: 에센셜립세럼스틱 4g
+                            Chanel’s Spring/Summer 2024 haute couture show today centered not only on creative director
+                            Virginie Viard’s newest
+                            collection, but also on a single style detail in particular: the button. An oversize
+                            prototype of the fashion house’s
+                            interlocking C jacket button hung over the Paris runway like a crown jewel, in a nod to both
+                            grace and utilitarianism.
                           </p>
                           <p class="date">
-                            2023.11.20
+                            2024.01.23
                           </p>
                         </div>
                       </div>
                     </div>
                     <div class="image-box">
-                      <img src="./assets/images/news_thumbnail6.png" alt>
+                      <img src="./assets/images/news_thumbnail5.jpg" alt>
                     </div>
                   </a>
                 </li>
@@ -559,11 +564,66 @@
                       <div class="desc">
                         <div class="bottom">
                           <p class="text">
-                            안녕하세요 네이버 설화수 공식스토어를 이용해 주심에 감사드립니다.
-                            이번주 브랜드위크 사은품인 35만원 구매시 증정되는 기프티콘은
-                            구매확정 확인 후 주차별 순차적으로 개별 발송됨을 안내 드리며
-                            당월 내 모두 발송 예정인 점 안내드립니다.
-                            감사합니다.
+                            Chanel is celebrating the roaring 1920s for its Christmas campaign 2023 this party season.
+                            Striking eyes, deep lipsticks and champagne highlights nod to the iconic looks Gabrielle
+                            Chanel helped popularise in
+                            'les années folles'.
+                            "Its aesthetic resonates with Gabrielle Chanel’s style. Her black evening dresses covered
+                            with sequins in the 1920s
+                            responded to the quest of graphic impact and the desire to shine," said Chanel.
+                          </p>
+                          <p class="date">
+                            2023.11.23
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="image-box">
+                      <img src="./assets/images/news_thumbnail6.jpeg" alt>
+                    </div>
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="" class="link-news">
+                    <div class="text-box">
+                      <div class="desc">
+                        <div class="bottom">
+                          <p class="text">
+                            In collaboration with Chanel, Shinsegae Duty Free has opened Asia’s largest travel retail
+                            podium at the Incheon
+                            International Airport, Terminal 2, on November 16, 2023.
+
+                            Dubbed "Chanel Wonderland" the new space is a mesmerizing mega podium designed to create a
+                            magical experience for
+                            travelers during the holiday season. With its grand dimensions, standing at 7 meters in
+                            height and occupying
+                            approximately 130 square meters, this podium is set to redefine the duty-free experience. It
+                            is brought to life with the
+                            theme of "the magic of a special holiday with Chanel."
+                          </p>
+                          <p class="date">
+                            2023.11.19
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="image-box">
+                      <img src="./assets/images/news_thumbnail7.jpg" alt>
+                    </div>
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="" class="link-news">
+                    <div class="text-box">
+                      <div class="desc">
+                        <div class="bottom">
+                          <p class="text">
+                            Chanel has teased behind-the-scenes shots from its hotly-anticipated Bleu De Chanel campaign
+                            video starring new
+                            ambassador, actor Timothée Chalamet.
+                            The luxury brand’s short film, directed by Taxi Driver and Goodfellas director Martin
+                            Scorsese, casts Chalamet a man on
+                            a quest to find himself, following only his own instinct.
                           </p>
                           <p class="date">
                             2023.10.11
@@ -572,49 +632,7 @@
                       </div>
                     </div>
                     <div class="image-box">
-                      <img src="./assets/images/news_thumbnail7.png" alt>
-                    </div>
-                  </a>
-                </li>
-                <li class="swiper-slide">
-                  <a href="" class="link-news">
-                    <div class="text-box">
-                      <div class="desc">
-                        <div class="bottom">
-                          <p class="text">
-                            안녕하세요 네이버 설화수 공식스토어 입니다.
-                            지난 9월 20일 브랜드데이 구매왕 및 구매인증이벤트 당첨자. 그리고 25일 구매왕 및 구매인증 이벤트 당첨자 공지 드립니다.
-                            경품은 차주 내 순차적으로 발송 될 예정입니다.
-                            이벤트 당첨에 축하 드립니다!
-                            감사합니다.
-                          </p>
-                          <p class="date">
-                            2023.09.27
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="image-box">
-                      <img src="./assets/images/news_thumbnail7.png" alt>
-                    </div>
-                  </a>
-                </li>
-                <li class="swiper-slide">
-                  <a href="" class="link-news">
-                    <div class="text-box">
-                      <div class="desc">
-                        <div class="bottom">
-                          <p class="text">
-                            설화수 지함포 패키지로 아름다움과 정성을 선물하세요.
-                          </p>
-                          <p class="date">
-                            2023.09.11
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="image-box">
-                      <img src="./assets/images/news_thumbnail5.png" alt>
+                      <img src="./assets/images/news_thumbnail8.jpeg" alt>
                     </div>
                   </a>
                 </li>
