샤넬로 브랜드 교체

--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item" aria-labelledby="instagram">
-                <a href="https://www.instagram.com/sulwhasoo.official/" id="instagram">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" id="instagram">
                 </a>
               </li>
               <li class="sns-item" aria-labelledby="twitter">
-                <a href="https://twitter.com/SulwhasooKR" id="twitter">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                  id="twitter">
                 </a>
               </li>
             </ul>
@@ -654,25 +655,25 @@
             </div>
             <div class="banner">
               <div class="text" aria-labelledby="sulwhasoo-link">
-                <img src="./assets/images/AMINO_MASON_WEB_SITE2.png" alt id="sulwhasoo-link">
+                <img src="./assets/images/AMINO_MASON_WEB_SITE.png" alt id="sulwhasoo-link">
               </div>
             </div>
           </div>
-          <p class="ingredient" aria-describedby="성분">정제수, 부틸렌글라이콜, 글리세린, 세틸에틸헥사노에이트, 메틸글루세스-20, 베헤닐알코올, 베타인,
-            1,2-헥산다이올, 나이아신아마이드,
-            메톡시피이지-114/폴리엡실론카프로락톤, 카보머, 트로메타민,
-            페닐트라이메티콘, 카프릴릴메티콘, 호호바에스터, 향료, 하이드롤라이즈드홍삼사포닌, 글리세릴카프릴레이트, 페녹시에탄올, 아라키딜알코올, 에틸헥실글리세린, 다이소듐이디티에이, 덱스트린,
-            카카오추출물,
-            아라키딜글루코사이드, 리날룰, 인삼씨오일, 돌콩오일, 인삼추출물, 소듐클로라이드, 인삼잎/줄기추출물, 리모넨, 꿀, 지황뿌리추출물, 인삼꽃추출물, 작약뿌리추출물, 마돈나백합비늘줄기추출물,
-            둥굴레뿌리줄기추출물,
-            레티놀, 연꽃추출물, 하이드로제네이티드레시틴, 에탄올, 글루코오스, 토코페롤, 카프릴릴글라이콜, 비에이치티, 펜타에리스리틸테트라-다이-T-부틸하이드록시하이드로신나메이트, 피토스핑고신,
-            소듐폴리아스파테이트,
-            소듐하이알루로네이트, 아세틸헵타펩타이드-4, 소듐메틸스테아로일타우레이트, 아세틸헥사펩타이드-8, 소듐하이드록사이드, 아세틸옥타펩타이드-3, 변성알코올, 비스-피이지-18메틸에터다이메틸실레인,
-            글리세릴폴리메타크릴레이트, 프로판다이올, 카보머, 피피지-13-데실테트라데세스-24, 트로메타민, 글리세릴카프릴레이트, 황금추출물, 에틸헥실글리세린, 향료, 아데노신, 리모넨, 덱스트린,
-            카카오추출물,
-            메틸트라이메티콘, 다이소듐이디티에이, 잔탄검, 셀룰로오스검, 카라기난, 꿀, 마데카소사이드, 지황뿌리추출물, 펜틸렌글라이콜, 다이포타슘글리시리제이트, 3-O-에틸아스코빅애씨드, 타우린,
-            소엽맥문동뿌리추출물,
-            작약뿌리추출물, 마돈나백합비늘줄기추출물,
+
+          <p class="ingredient" aria-describedby="성분">CAMELLIA JAPONICA FLOWER WATER, AQUA (WATER),
+            GLYCERIN, MORINGA OIL/HYDROGENATED MORINGA OIL
+            ESTERS, OCTYLDODECYL MYRISTATE, CETEARYL ALCOHOL, CAMELLIA OLEIFERA SEED OIL, BEHENYL ALCOHOL, CAMELLIA
+            JAPONICA
+            SEED OIL, PENTAERYTHRITYL STEARATE/CAPRATE/CAPRYLATE/ADIPATE, OLUS (VEGETABLE OIL), PANTHENOL, PROPANEDIOL,
+            FAEX
+            (YEAST EXTRACT), CAMELLIA JAPONICA FLOWER EXTRACT, CERAMIDE NP, PHYTOSPHINGOSINE, CETEARYL GLUCOSIDE,
+            PENTYLENE
+            GLYCOL, CARBOMER, GLYCERYL STEARATE SE, SODIUM STEAROYL GLUTAMATE, PARFUM (FRAGRANCE), CHLORPHENESIN,
+            CAPRYLYL
+            GLYCOL, CAMELINA SATIVA SEED OIL, SODIUM HYDROXIDE, SODIUM HYALURONATE, ADENOSINE, PENTAERYTHRITYL
+            TETRA-DI-T-BUTYL
+            HYDROXYHYDROCINNAMATE, LACTIC ACID, 1,2-HEXANEDIOL, PHYTIC ACID, HYDROGENATED LECITHIN, TOCOPHEROL, SODIUM
+            CITRATE, PALMITOYL TETRAPEPTIDE-7, SODIUM BENZOATE, CITRIC ACID, BS000027B
           </p>
         </div>
       </section>
@@ -689,7 +690,7 @@
               THE <br> BEAUTI <br> FUL
             </span>
             <span class="sub-title">
-              by Sulwhasoo
+              by CHANEL
             </span>
           </a>
         </h2>
@@ -700,11 +701,12 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item" aria-describedby="instagram">
-                <a href="https://www.instagram.com/sulwhasoo.official/" id="instagram">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" id="instagram">
                 </a>
               </li>
               <li class="sns-item" aria-describedby="twitter">
-                <a href="https://twitter.com/SulwhasooKR" id="twitter">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                  id="twitter">
                 </a>
               </li>
             </ul>
@@ -784,10 +786,10 @@
               </a>
             </div>
             <address class="addr">
-              <p>(주)아모레퍼시픽<br>
-                (우)04386 <br>
-                서울특별시 용산구 한강대로 100(한강로2가)</p>
-              <a href="tel:+080-030-5454" class="tel">Tel.080-030-5454</a>
+              <p>Chanel S.A.S.<br>
+                135 Av.<br>
+                Charles de Gaulle, 92200 Neuilly-sur-Seine</p>
+              <a href="tel:+33975180661" class="tel">Tel.+33-9-75-18-06-61</a>
             </address>
           </div>
         </div>
