샤넬로 브랜드 교체

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </h2>
             <div class="text-box">
               <p class="desc">
-                In-depth study of the House’s emblematic flower<br> led CHANEL Research <br>to discover its
+                In-depth study of the House’s emblematic <br>flower led CHANEL Research <br>to discover its
                 extraordinary levels<br>
                 of
                 protocatechuic acid, a molecule belonging<br> to the polyphenol family that is known for <br>its
@@ -197,10 +197,10 @@
               <!-- 960미만 -->
               <!-- <source media="(max-width: 960px)" srcset="./assets/images/concept_picture2.jpg">
               <img src="./assets/images/concept_picture2.jpg" alt> -->
-              <source media="(max-width: 768px)"
-                srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 768w">
-              <source media="(min-width: 769px)"
-                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 3200w">
+              <source media="(max-width: 960px)"
+                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
+              <source media="(min-width: 961px)"
+                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
               <img alt=""
                 src="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
             </picture>
@@ -259,12 +259,10 @@
           </div>
           <div class="bottom-text">
             <p class="text">
-              The Red Camellia is a flower unlike any other. <br>Its exceptional resilience and <br>concentrated energy
+              The Red Camellia is a flower <br>unlike any other. <br>Its exceptional resilience and <br>concentrated
+              energy
               allow <br>it to bloom
-              during winter at extreme temperatures.<br> Within its petals, CHANEL Research identified <br>a
-              revitalizing
-              ingredient <br>that
-              helps keep skin looking youthful.<br>
+              during winter <br>at extreme temperatures.
             </p>
             <a href="" class="link-headline">
               <p class="link-title">
@@ -326,7 +324,7 @@
           <div class="image-box" data-scroll="">
             <picture>
               <source media="(min-width: 961px)" srcset="./assets/images/scienceantiaged.jpg">
-              <source media="(max-width: 960px)" srcset="./assets/images/ethical_section_picture2@sp.webp">
+              <source media="(max-width: 960px)" srcset="./assets/images/scienceantiagedet@sp.webp">
               <img src="./assets/images/scienceantiaged.jpg" alt>
             </picture>
           </div>
