validator 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="wrapper">
     <header class="header">
       <div class="menu-box">
-        <button aria-labelledby="메뉴 열기" aria-expanded="false" aria-haspopup="menu" aria-selected="false">
+        <button aria-expanded="false" aria-haspopup="menu">
           <span class="menu-text">
             <span class="top">menu</span>
             <span class="bottom" aria-hidden="true">menu</span>
@@ -116,15 +116,15 @@
         </nav>
         <div class="group-sub">
           <div class="sns-area">
-            <p class="title">
+            <p class="title" id="snslabel">
               <a href="">FOLLOW US!</a>
             </p>
             <ul class="sns-list">
-              <li class="sns-item" aria-labelledby="instagram">
+              <li class="sns-item" aria-labelledby="snslabel">
                 <a href="https://www.instagram.com/chanelofficial/?hl=en" id="instagram">
                 </a>
               </li>
-              <li class="sns-item" aria-labelledby="twitter">
+              <li class="sns-item" aria-labelledby="snslabel">
                 <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
                   id="twitter">
                 </a>
@@ -148,17 +148,9 @@
       <section class="section-slogan">
         <div class="image-box">
           <picture>
-            <!-- 961이상 -->
-            <source media="(min-width: 961px)" srcset="./assets/images/firstview_picture2.webp">
-            <!-- 960미만 -->
-            <source media="(max-width: 960px)" srcset="./assets/images/firstview_picture2@sp.webp">
+            <source media="(min-width: 961px)" srcset="./assets/images/firstview_picture2.webp 2220w" sizes="100vw">
+            <source media="(max-width: 960px)" srcset="./assets/images/firstview_picture2@sp.webp 1277w" sizes="100vw">
             <img src="/assets/images/firstview_picture2.webp" alt>
-
-            <!-- 961이상 -->
-            <!-- <source media="(min-width: 961px)" srcset="./assets/images/firstview_picture.webp"> -->
-            <!-- 960미만 -->
-            <!-- <source media="(max-width: 960px)" srcset="./assets/images/firstview_picture@sp.webp">
-            <img src="/assets/images/firstview_picture.webp" alt> -->
           </picture>
         </div>
         <div class="title-box">
@@ -183,26 +175,21 @@
                 antioxidant
                 properties.<br>
                 THE POWER OF THE RED CAMELLIA<br>
-                <!-- 2023년, 설화수 브랜드의 시작과 함께한 윤조에센스가 <br>6세대로 또 한 번 진화합니다.<br>
-                인삼의 힘으로 더욱 강력해진<br> SULWHASOO MASTER COMPLEX™.<br>
-                놓여있는 것만으로도 당신의 취향과 <br> 안목을 보여주는 새로운 디자인.
-                피부 능력을 깨워줄 <br> 6세대 윤조에센스를 지금 만나보세요. -->
+
               </p>
             </div>
           </div>
           <div class="image-box" data-scroll="">
             <picture>
-              <!-- 961이상 -->
-              <!-- <source media="(min-width: 961px)" srcset="./assets/images/concept_picture2.jpg"> -->
-              <!-- 960미만 -->
-              <!-- <source media="(max-width: 960px)" srcset="./assets/images/concept_picture2.jpg">
-              <img src="./assets/images/concept_picture2.jpg" alt> -->
               <source media="(max-width: 960px)"
-                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
+                srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 768w"
+                sizes="100vw">
               <source media="(min-width: 961px)"
-                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
-              <img alt=""
-                src="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
+                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 3200w"
+                sizes="100vw">
+              <img
+                src="https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg"
+                alt>
             </picture>
           </div>
           <div class="desc-effect">
@@ -220,7 +207,6 @@
             <img src="./assets/images/separator.png" alt>
           </div>
         </div>
-
       </section>
       <section class="section-about" id="about">
         <div class="background" data-scroll=""></div>
@@ -233,17 +219,15 @@
         </strong>
         <div class="image-box" data-scroll="">
           <picture>
-            <!-- 961이상 -->
-            <!-- <source media="(min-width: 961px)" srcset="./assets/images/about_picture2-3.png"> -->
-            <!-- 960미만 -->
-            <!-- <source media="(max-width: 960px)" srcset="./assets/images/about_picture2-3@sp.webp">
-            <img src="./assets/images/about_picture2-3.png" alt> -->
             <source media="(max-width: 960px)"
-              srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 768w">
+              srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 768w"
+              sizes="100vw">
             <source media="(min-width: 961px)"
-              srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 3200w">
-            <img alt=""
-              src="https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg">
+              srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 3200w"
+              sizes="100vw">
+            <img
+              src="https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg"
+              alt>
           </picture>
         </div>
         <div class="desc" data-scroll="">
@@ -652,13 +636,13 @@
               <img src="./assets/images/aminomason_banner_picture2.png" alt>
             </div>
             <div class="banner">
-              <div class="text" aria-labelledby="sulwhasoo-link">
-                <img src="./assets/images/AMINO_MASON_WEB_SITE.png" alt id="sulwhasoo-link">
+              <div class="text">
+                <img src="./assets/images/AMINO_MASON_WEB_SITE.png" alt>
               </div>
             </div>
           </div>
 
-          <p class="ingredient" aria-describedby="성분">CAMELLIA JAPONICA FLOWER WATER, AQUA (WATER),
+          <p class="ingredient">CAMELLIA JAPONICA FLOWER WATER, AQUA (WATER),
             GLYCERIN, MORINGA OIL/HYDROGENATED MORINGA OIL
             ESTERS, OCTYLDODECYL MYRISTATE, CETEARYL ALCOHOL, CAMELLIA OLEIFERA SEED OIL, BEHENYL ALCOHOL, CAMELLIA
             JAPONICA
@@ -683,7 +667,7 @@
       <div class="footer_inner">
         <h2 class="footer_logo" id="footer-logo">
           <span class="blind">푸터 로고</span>
-          <a href="" aria-labelledby="footer-logo">
+          <a href="">
             <span class="title">
               THE <br> BEAUTI <br> FUL
             </span>
@@ -699,12 +683,11 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item" aria-describedby="instagram">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en" id="instagram">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en">
                 </a>
               </li>
               <li class="sns-item" aria-describedby="twitter">
-                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                  id="twitter">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
                 </a>
               </li>
             </ul>
