validator 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
         <div class="desc" data-scroll="">
           <div class="top">
             <picture>
-              <!-- 961이상 -->
-              <source media="(min-width: 961px)" srcset="./assets/images/about-desc2.png">
-              <!-- <source media="(min-width: 961px)" srcset="./assets/images/about-desc.png"> -->
-              <!-- 960미만 -->
-              <source media="(max-width: 960px)" srcset="./assets/images/about_footer_figure2@sp.png">
+              <!-- 961픽셀 이상 -->
+              <source media="(min-width: 961px)" srcset="./assets/images/about-desc2.png 2132w" sizes="100vw">
+              <!-- 960픽셀 미만 -->
+              <source media="(max-width: 960px)" srcset="./assets/images/about_footer_figure2@sp.png 325w"
+                sizes="100vw">
               <img src="./assets/images/about-desc2.png" alt>
             </picture>
           </div>
