top 버튼 기능 수정

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav class="group-main">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="#">
+              <a href="" class="toMain" role="button" type="button">
                 <span class="top">TOP</span>
                 <span class="bottom" aria-hidden="true">TOP</span>
               </a>
@@ -144,7 +144,7 @@
         </div>
       </div>
     </aside>
-    <main class="container">
+    <main class="container" id="main">
       <section class="section-slogan">
         <div class="image-box">
           <picture>
@@ -695,7 +695,7 @@
           <div class="group-grid">
             <ul class="nav-list left">
               <li class="nav-item">
-                <a href="#">
+                <a href="" class="toMain">
                   <span class="top">TOP</span>
                   <span class="bottom" aria-hidden="true">TOP</span>
                 </a>
