openWax 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="">
+              <a href="#qna">
                 <span class="top">Q&#38;A</span>
                 <span class="bottom" aria-hidden="true">Q&#38;A</span>
               </a>
